:lipstick: Change fixed values to spacing tokens

--- a/packages/next-templates/src/app/globals.css
+++ b/packages/next-templates/src/app/globals.css
@@ -157,8 +157,8 @@ utrecht-alert
 
 .voorbeeld-accordion-chevron--right {
   --utrecht-icon-size: var(--voorbeeld-size-icon-sm);
-  --utrecht-icon-inset-block-start: 0.14em;
-  margin-inline-end: 0.2em;
+  --utrecht-icon-inset-block-start: var(--voorbeeld-space-inline-flea);
+  margin-inline-end: var(--voorbeeld-space-inline-ant);
 }
 
 .utrecht-ordered-list__item::marker {
@@ -278,8 +278,8 @@ utrecht-alert
   min-inline-size: calc(var(--utrecht-article-max-inline-size) * 1.125);
   inline-size: calc(var(--utrecht-article-max-inline-size) * 1.125);
   margin-block-end: 1px;
-  --utrecht-accordion-panel-padding-inline-start: 3em;
-  --utrecht-accordion-panel-padding-inline-end: 3em;
+  --utrecht-accordion-panel-padding-inline-start: var(--voorbeeld-space-inline-pig);
+  --utrecht-accordion-panel-padding-inline-end: var(--voorbeeld-space-inline-pig);
   box-sizing: border-box;
 }
 
